--- a/alertmanager/alertmanager.yml
+++ b/alertmanager/alertmanager.yml
@@ -1,26 +1,26 @@
 global:
   resolve_timeout: 5m
-  smtp_smarthost: ${ALERT_MANAGER_SMTP_SMARTHOST}
-  smtp_from: ${ALERT_MANAGER_SMTP_FROM}
-  smtp_auth_username: ${ALERT_MANAGER_SMTP_AUTH_USERNAME}
-  smtp_auth_password: ${ALERT_MANAGER_SMTP_AUTH_PASSWORD}
 
 route:
-  group_by: ['alertname', 'severity']
-  group_wait: 10s
-  group_interval: 5m
-  repeat_interval: 3h
   receiver: 'email-notification'
 
 receivers:
 - name: 'email-notification'
   email_configs:
-  - to: 'krzysiek.kolodziej23@gmail.com'
+  - smarthost: 'smtp.gmail.com:587'
+    from: 'krzysiek.kolodziej23@gmail.com'
+    to: 'krzysiek.kolodziej23@gmail.com'
+    auth_username: 'krzysiek.kolodziej23@gmail.com'
+    auth_password: 'hxki hksg gkii rvij'
     send_resolved: true
+    require_tls: true
+    headers:
+      subject: 'Prometheus Mail Alerts'
 
 inhibit_rules:
 - source_match:
     severity: 'critical'
   target_match:
     severity: 'warning'
-  equal: ['alertname', 'instance']
+  equal: ['alertname', 'dev', 'instance']
+
