--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 name: systemy-integracyjne-monitoring
 services:
   prometheus:
@@ -33,6 +32,8 @@ services:
   alertmanager:
     container_name: alertmanager
     image: prom/alertmanager
+    depends_on:
+      - prometheus
     ports:
       - '9093:9093'
     volumes:
@@ -40,11 +41,7 @@ services:
     command:
       - '--config.file=/etc/alertmanager/alertmanager.yml'
     restart: always
-    environment:
-      - ALERT_MANAGER_SMTP_SMARTHOST=${ALERT_MANAGER_SMTP_SMARTHOST}
-      - ALERT_MANAGER_SMTP_FROM=${ALERT_MANAGER_SMTP_FROM}
-      - ALERT_MANAGER_SMTP_AUTH_USERNAME=${ALERT_MANAGER_SMTP_AUTH_USERNAME}
-      - ALERT_MANAGER_SMTP_AUTH_PASSWORD=${ALERT_MANAGER_SMTP_AUTH_PASSWORD}
+ 
   web_server:
     container_name: web_server
     image: httpd:2.4
