--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -8,3 +8,13 @@ scrape_configs:
       
 rule_files:
   - "/etc/prometheus/rules.yml"
+
+alerting:
+  alertmanagers:
+  - api_version: v2
+    enable_http2: True
+    follow_redirects: True
+    scheme: http
+    timeout: 10s
+    static_configs:
+      - targets: ['alertmanager:9093']
